--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "googleapis": "27",
-    "readline": "^1.3.0",
     "vue": "^2.5.16",
-    "vue-gapi": "^0.0.8",
-    "vuex": "^3.0.1"
+    "vue-gapi": "^0.0.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
