Configure pour le build

--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "roche-fils-calendriers-solution",
+  "productName": "Calendriers Imprimables",
+  "author":"Eric Guyader",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "vue-serve": "vue-cli-service serve",
     "vue-build": "vue-cli-service build",
     "vue-lint": "vue-cli-service lint",
-    "electron": "electron electron-start",
-    "dev": "concurrently --kill-others \"yarn vue-serve\" \"sleep 15 && cross-env NODE_ENV=DEV yarn electron\""
+    "electron": "electron index",
+    "dev": "concurrently --kill-others \"yarn vue-serve\" \"sleep 15 && cross-env NODE_ENV=DEV yarn electron\"",
+    "package": "yarn vue-build && build"
   },
   "dependencies": {
-    "electron": "^2.0.6",
     "opn": "^5.3.0",
     "vue": "^2.5.16"
   },
@@ -18,6 +20,7 @@
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
+    "electron": "^2.0.6",
     "concurrently": "^3.6.1",
     "cross-env": "^5.2.0",
     "vue-template-compiler": "^2.5.16"
@@ -45,5 +48,9 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "build":{
+    "appId": "com.EricGuyaderBerger.CalendriersImprimables",
+    "files": "!build-assets${/*}"
+  }
 }
