Crée la version distribuable fonctionnelle

--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
   ],
   "build": {
     "appId": "com.EricGuyaderBerger.CalendriersImprimables",
-    "files": "!build-assets${/*}"
+    "files": ["!build-assets${/*}","!build${/*}"],
+    "directories": {
+      "output": "build"
+    }
   }
 }
