--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cross-env": "^5.2.0",
     "electron": "^2.0.6",
     "electron-builder": "^20.27.1",
+    "electron-icon-maker": "^0.0.4",
     "vue-template-compiler": "^2.5.16"
   },
   "eslintConfig": {
